--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Jekyll configuration
 
-name: E Posta Kur, E Posta Aç, Email Aç - Kaydol
+name: E Posta Kur, E Posta Aç, Email Aç
 description: E Posta Kur, E Posta Aç, Email Aç konularında basitçe anlatımlarla sizler de Hotmail kaydol işlemini kolayca yapın.
 
 # url is currently only used only for the RSS feed in feed.xml
